--- a/社区电商.md
+++ b/社区电商.md
@@ -18,7 +18,7 @@
 2. 网络品牌 : 探索网络公开课、年轻人青睐的直播业态和服务项目入驻社区，链接各大 "微信公众号平台"，"抖音平台"，如网络平台"成都本地宝"等宣传。
 
 #### 关键因素
-    政府的引导和支持： 郊县政府应出台相关政策，在资金、人才、平台建设等方面给予社区支持。
+    政府的引导和支持： 政府应出台相关政策，在资金、人才、平台建设等方面给予社区支持。
     带动居民积极参与： 充分调动居民的积极性和创造性，让居民成为社区品牌建设的主力军。
     市场化的运作理念： 将社区品牌建设与市场需求相结合，注重经济效益和社会效益的统一。
     持续的创新和迭代： 社区品牌建设和电商发展是一个不断创新和完善的过程，需要根据实际情况及时调整策略。
