--- a/社区电商.md
+++ b/社区电商.md
@@ -71,7 +71,7 @@
         开展电商技能培训，提升社区居民的电商运营能力。
         引进专业的电商团队或机构，为社区电商发展提供支持。
     打造社区电商特色品牌：
-        将社区特色文化融入电商产品设计和营销中，打造具有独特 पहचान的社区电商品牌。
+        将社区特色文化融入电商产品设计和营销中，打造具有独特画像的社区电商品牌。
         注重产品质量和用户体验，建立良好的口碑。
     发展“社区+电商+N”模式：
         将电商与社区旅游、文化体验、教育培训等产业相结合，拓展社区品牌价值链。
