--- a/社区电商.md
+++ b/社区电商.md
@@ -87,7 +87,7 @@
 一、 积极影响：
 
     促进社区经济发展，增加居民收入：
-        线上销售渠道拓展： 电商团队能够帮助社区内的商家、手工艺人、农户等将产品和服务通过互联网销售到更广阔的市场，突破地域限制，增加销售额。
+        线上销售渠道拓展： 电商团队能够帮助社区内的商家、手工艺人、农户等将产品和服务通过互联网突破地域限制，增加销售额。
         创业机会增加： 电商门槛相对较低，为社区居民提供了新的创业机会，例如开设网店、进行直播带货、提供电商运营服务等。
         本地特色产品推广： 电商团队能够挖掘和包装社区特色产品，通过线上营销提升其知名度和销量，带动相关产业发展。
         就业岗位创造： 随着社区电商的发展，需要运营、客服、美工、仓储、物流等方面的专业人才，为社区创造新的就业岗位。
