--- a/社区电商.md
+++ b/社区电商.md
@@ -200,7 +200,7 @@
         包装美观： 精美的包装能提升产品价值感，吸引消费者。
         清晰标识： 包装上应清晰标注品种、规格、重量、生产日期、保质期（建议食用期）等信息。
 
-二、 商品描述与图片展示：
+二、 商品描述清晰并展示到位：
 
     真实准确的描述：
         详细描述： 包括品种特点、口感、甜度、产地、种植方式等，避免夸大宣传。
