--- a/电商代理.md
+++ b/电商代理.md
@@ -29,6 +29,12 @@
       - [小伙开网店卖水果，贴假标签近500万，溢价50%～300%，被警方查获时销售金额已达十万元！](https://pan.baidu.com/s/1w1pFC--tXIHD6u7-AfgnLA?pwd=wens)
       - [做10天荔枝生意能挣多少钱？队长新系列开启，深入水果销售，采购，加工，带你了解电商各个环节的运营模式！](https://pan.baidu.com/s/1w1pFC--tXIHD6u7-AfgnLA?pwd=wens)
       - [小夫妻做水果电商，每次带货都要遭受质疑，说成是中间商二道贩子。中间商本该是煲义词，对商品的流通和销售至关重要，现在更多时候成了贬义词。](https://pan.baidu.com/s/1w1pFC--tXIHD6u7-AfgnLA?pwd=wens)
+    - 学习知识
+      - 播前做好4件事，把控全场
+        - 一、职能分工 ![](https://github.com/angenalZZZ/doc/blob/master/screenshots/b5d66efb5dccd1fafa605f81eda1c60a00b845df.avif)
+        - 二、选品参谋 
+        - 三、直播带货脚本参考 ![](https://github.com/angenalZZZ/doc/blob/master/screenshots/3912cf3ff24685a622880a5d7840658d19126ac2.avif)![](https://github.com/angenalZZZ/doc/blob/master/screenshots/a02f15f2f7462272afe3ffe44109a86d95c04836.avif)
+        - 四、直播间场景与设备参考 ![](https://github.com/angenalZZZ/doc/blob/master/screenshots/0706c4321b79a18bac85d789170c3abb8b97e9aa.avif)![](https://github.com/angenalZZZ/doc/blob/master/screenshots/98708cb2fb04c97411b6c2bad352e30824b5cb24.avif)![](https://github.com/angenalZZZ/doc/blob/master/screenshots/061a53fb5dc76063bb05970c8c76b6b3dd3d40da.avif)![](https://github.com/angenalZZZ/doc/blob/master/screenshots/95d6fcededd38f920a87d2fc6bfdb91673db4493.avif)![](https://github.com/angenalZZZ/doc/blob/master/screenshots/56218a785f2a828a483c0e59a7b6170647a5bb55.avif)![](https://github.com/angenalZZZ/doc/blob/master/screenshots/7189e41b07f0fd85bb62a6194597559e2b5f3a6e.avif)
 
 
 不论是做水果的生产还是销售，都必须关注电商，因为趋势代表着未来。<br>
