--- a/电商代理.md
+++ b/电商代理.md
@@ -30,7 +30,7 @@
       - [做10天荔枝生意能挣多少钱？队长新系列开启，深入水果销售，采购，加工，带你了解电商各个环节的运营模式！](https://pan.baidu.com/s/1w1pFC--tXIHD6u7-AfgnLA?pwd=wens)
       - [小夫妻做水果电商，每次带货都要遭受质疑，说成是中间商二道贩子。中间商本该是煲义词，对商品的流通和销售至关重要，现在更多时候成了贬义词。](https://pan.baidu.com/s/1w1pFC--tXIHD6u7-AfgnLA?pwd=wens)
     - 学习知识
-      - 播前做好4件事，把控全场
+      - [播前做好4件事，把控全场](https://www.bilibili.com/opus/620639988507607606)
         - 一、职能分工 ![](https://github.com/angenalZZZ/doc/blob/master/screenshots/b5d66efb5dccd1fafa605f81eda1c60a00b845df.webp)
         - 二、选品参谋 
         - 三、直播带货脚本参考 ![](https://github.com/angenalZZZ/doc/blob/master/screenshots/3912cf3ff24685a622880a5d7840658d19126ac2.webp)![](https://github.com/angenalZZZ/doc/blob/master/screenshots/a02f15f2f7462272afe3ffe44109a86d95c04836.webp)
