--- a/电商代理.md
+++ b/电商代理.md
@@ -29,6 +29,11 @@
       - [小伙开网店卖水果，贴假标签近500万，溢价50%～300%，被警方查获时销售金额已达十万元！](https://pan.baidu.com/s/1w1pFC--tXIHD6u7-AfgnLA?pwd=wens)
       - [做10天荔枝生意能挣多少钱？队长新系列开启，深入水果销售，采购，加工，带你了解电商各个环节的运营模式！](https://pan.baidu.com/s/1w1pFC--tXIHD6u7-AfgnLA?pwd=wens)
       - [小夫妻做水果电商，每次带货都要遭受质疑，说成是中间商二道贩子。中间商本该是煲义词，对商品的流通和销售至关重要，现在更多时候成了贬义词。](https://pan.baidu.com/s/1w1pFC--tXIHD6u7-AfgnLA?pwd=wens)
+    - 转嫁+流量
+      - 1.抖音搜索“热点词”，取排名前三的视频，进行复制“分享”。
+      - 2.粘贴到AI的提示词中，换行后再输入“根据该视频提炼出标题和大纲，包括事件核心内容，帮我写一个完整的事件，我用来发布到今日头条平台上，写的文章要符合今日头条的爆文写作方格，原创度百分之70以上，对此文章加点自己的看法，或者以中肯的角度写，字数500字左右。”
+      - 3.小红书搜索“热点词”，保存几张跟此文章主题相似的图片。
+      - 4.今日头条中发布文章，复制粘贴上面的“标题”、“内容”、“图片”。
     - 学习知识
       - [播前做好4件事，把控全场](https://www.bilibili.com/opus/620639988507607606)
         - 一、职能分工 ![](screenshots/b5d66efb5dccd1fafa605f81eda1c60a00b845df.webp)
