--- a/社区电商.md
+++ b/社区电商.md
@@ -1,6 +1,6 @@
 # 社区
 
-[电商政策](#电商政策)、[电商效应](#电商效应)、[电商经营](#电商经营)、[电商销售桃子](#电商销售桃子)……
+[电商政策](#电商政策)、[电商效应](#电商效应)、[电商经营](#电商经营)、[电商方案](#电商方案)、[电商销售桃子](#电商销售桃子)……
 
 ### 成都市百强社区名单
 * 高新区：盛华社区、蓓蕾社区、府城社区、兴蓉社区、顺江社区
@@ -183,7 +183,7 @@
 
 ---
 
-### [电商解决方案](电商代理.md)
+### [电商方案](电商代理.md)
 
 系统性地推动本地农产品和商业品牌的线上经营，既提升交易效率，又能增强社区经济活力。
 
