--- a/社区电商.md
+++ b/社区电商.md
@@ -185,7 +185,7 @@
 
 ### [电商方案](电商代理.md)
 
-出访水果生产大省山东、广西、陕西，调查特色产业园区。系统性地推动本地农产品和商业品牌的线上经营，既提升交易率，又能增强社区经济活力。
+出访水果生产大省山东、广西、陕西，调查特色产业园区。推动本地农产品和商业品牌的线上经营，既提升交易效率，又能增强社区经济活力。
 
 #### 一、平台选择与资源整合
 
