--- a/网络安全.md
+++ b/网络安全.md
@@ -34,6 +34,47 @@ naabu -host 39.156.66.10 -json           # 输出json格式
 naabu -host 39.156.66.10 -silent | *.exe # 通过管道输出给其它工具
 naabu -list hosts.txt
 ~~~
+* [`端口`扫描`Nmap`](https://github.com/nmap)、[Npcap](https://github.com/nmap/npcap)、[Ncrack](https://github.com/nmap/ncrack)、[Milkyway](https://github.com/polite-007/Milkyway)
+~~~
+# Ncrack <service_name> <port_number>/<protocol> <module-specific-options> where protocol = either tcp or udp
+ftp 21/tcp
+ssh 22/tcp
+telnet 23/tcp
+http 80/tcp
+wordpress 80/tcp
+wp 80/tcp
+joomla 80/tcp
+dicom 104/tcp
+pop3 110/tcp
+imap 143/tcp
+netbios-ssn 445/tcp
+smb 445/tcp
+smb2 445/tcp
+smb 139/tcp
+https 443/tcp
+owa 443/tcp
+wordpress-tls 443/tcp
+wp-tls 443/tcp
+sip 5060/tcp
+pop3s 995/tcp
+mssql 1433/tcp
+mqtt 1883/tcp
+mysql 3306/tcp
+ms-wbt-server 3389/tcp
+rdp 3389/tcp
+psql 5432/tcp
+vnc 5801/tcp
+vnc 5900/tcp
+vnc 5901/tcp
+vnc 6001/tcp
+redis 6379/tcp
+winrm 5985/tcp
+winrm 5986/tcp
+cassandra 9160/tcp
+cassandra 9042/tcp
+mongodb 27017/tcp
+cvs 2401/tcp
+~~~
 * [浏览器数据解密](https://github.com/angenalZZZ/HackBrowserData)
 
 > Windows [更新](https://msrc.microsoft.com/update-guide) 
