--- a/网络安全.md
+++ b/网络安全.md
@@ -26,7 +26,7 @@
 # MD5解密:接口
 > curl http://www.scmd5.com/get_api.php?hash=e10adc3949ba59abbe56e057f20f883e
 ~~~
-* [`端口`扫描工具`naabu`](https://github.com/projectdiscovery/naabu)
+* [`端口`扫描工具`naabu`](https://github.com/projectdiscovery/naabu)、[`漏洞`扫描`Milkyway`](https://github.com/polite-007/Milkyway)
 ~~~bash
 naabu -host baidu.com
 naabu -host baidu.com -nmap-cli 'nmap -sV nmap-output'
@@ -34,7 +34,7 @@ naabu -host 39.156.66.10 -json           # 输出json格式
 naabu -host 39.156.66.10 -silent | *.exe # 通过管道输出给其它工具
 naabu -list hosts.txt
 ~~~
-* [`端口`扫描`Nmap`](https://github.com/nmap)、[Npcap](https://github.com/nmap/npcap)、[Ncrack](https://github.com/nmap/ncrack)、[Milkyway](https://github.com/polite-007/Milkyway)
+* [`端口`扫描`Nmap`](https://github.com/nmap)、[`Npcap`](https://github.com/nmap/npcap)、[`网络认证破解`工具`Ncrack`](https://github.com/nmap/ncrack)
 ~~~
 # Ncrack <service_name> <port_number>/<protocol> <module-specific-options> where protocol = either tcp or udp
 ftp 21/tcp
