--- a/网络安全.md
+++ b/网络安全.md
@@ -34,7 +34,7 @@ naabu -host 39.156.66.10 -json           # 输出json格式
 naabu -host 39.156.66.10 -silent | *.exe # 通过管道输出给其它工具
 naabu -list hosts.txt
 ~~~
-* [`端口`扫描`Nmap`](https://github.com/nmap)、[`Npcap`](https://github.com/nmap/npcap)、[`网络认证破解`工具`Ncrack`](https://github.com/nmap/ncrack)
+* [`端口`扫描`Nmap`](https://github.com/nmap)、[`Npcap`](https://github.com/nmap/npcap)、[`网络认证`破解`Ncrack`](https://github.com/nmap/ncrack)
 ~~~
 # Ncrack <service_name> <port_number>/<protocol> <module-specific-options> where protocol = either tcp or udp
 ftp 21/tcp
