--- a/网络安全.md
+++ b/网络安全.md
@@ -26,13 +26,25 @@
 # MD5解密:接口
 > curl http://www.scmd5.com/get_api.php?hash=e10adc3949ba59abbe56e057f20f883e
 ~~~
-* [`端口`扫描工具`naabu`](https://github.com/projectdiscovery/naabu)、[`漏洞`扫描`Milkyway`](https://github.com/polite-007/Milkyway)
+* [`端口`扫描工具`naabu`](https://github.com/projectdiscovery/naabu)、[内网`漏洞`扫描`fscan`](https://github.com/shadow1ng/fscan)、[`漏洞`扫描`Milkyway`](https://github.com/polite-007/Milkyway)
 ~~~bash
 naabu -host baidu.com
 naabu -host baidu.com -nmap-cli 'nmap -sV nmap-output'
 naabu -host 39.156.66.10 -json           # 输出json格式
 naabu -host 39.156.66.10 -silent | *.exe # 通过管道输出给其它工具
 naabu -list hosts.txt
+milkyway --fofa-query "domain=vulfocus.cn||host=vulfocus.cn" -p all --no-ping --scan-random # 外网●全端口●乱序扫描
+milkyway -t 192.168.2.12/24 -p all -c 1000 --no-ping --scan-random # 内网●全端口●无序扫描
+milkyway -t 192.168.1.12/24 -p small --full-scan # ●使用常用12个端口●全协议识别
+milkyway -t 192.168.1.12/24 -p sql     # ●使用常用数据库端口
+milkyway -t 192.168.1.12/24 -p company # ●使用公司常用87个端口
+milkyway -t 192.168.1.12/24 --no-ping  # ●跳过协议icmp扫描
+milkyway -t 192.168.1.12/24 --finger-file ./your.file # ●自定义指纹文件
+milkyway -t 192.168.1.12/24 --no-match # ●漏洞扫描不进行指纹匹配(即下发全量)
+milkyway -t 192.168.1.12/24 --poc-file ./your/poc # ●自定义漏洞poc目录
+milkyway -t 192.168.1.12/24 --poc-tags cve,cnvd # ●指定多个漏洞poc标签
+milkyway -t 192.168.1.12/24 --verbose  # ●打印协议详细信息
+
 ~~~
 * [`端口`扫描`Nmap`](https://github.com/nmap)、[`Npcap`](https://github.com/nmap/npcap)、[`网络认证`破解`Ncrack`](https://github.com/nmap/ncrack)
 ~~~
