--- a/网络安全.md
+++ b/网络安全.md
@@ -26,7 +26,7 @@
 # MD5解密:接口
 > curl http://www.scmd5.com/get_api.php?hash=e10adc3949ba59abbe56e057f20f883e
 ~~~
-* [`端口`扫描工具`naabu`](https://github.com/projectdiscovery/naabu)、[内网`漏洞`扫描`fscan`](https://github.com/shadow1ng/fscan)、[`漏洞`扫描`Milkyway`](https://github.com/polite-007/Milkyway)
+* [`端口`扫描工具`naabu`](https://github.com/projectdiscovery/naabu)、[内网`漏洞`扫描`fscan`](https://github.com/shadow1ng/fscan)、[`漏洞`扫描`Milkyway`](https://github.com/polite-007/Milkyway)、[`漏洞`集成`docker`平台](https://vulfocus.cn/)
 ~~~bash
 naabu -host baidu.com
 naabu -host baidu.com -nmap-cli 'nmap -sV nmap-output'
