--- a/网络安全.md
+++ b/网络安全.md
@@ -28,6 +28,7 @@
 ~~~
 * [`端口`扫描](https://github.com/topics/port-scanner)[工具`naabu`](https://github.com/projectdiscovery/naabu)、[内网`漏洞`扫描`fscan`](https://github.com/shadow1ng/fscan)、[`漏洞`扫描`Milkyway`](https://github.com/polite-007/Milkyway)、[`漏洞`集成`docker`平台](https://vulfocus.cn/)[`Vulfocus`](https://github.com/fofapro/vulfocus)
 ~~~bash
+arp -a  # arp-scan -I eth0 --localhost   # 局域网内所有IP
 naabu -host baidu.com
 naabu -host baidu.com -nmap-cli 'nmap -sV nmap-output'
 naabu -host 39.156.66.10 -json           # 输出json格式
