--- a/网络系统日志.md
+++ b/网络系统日志.md
@@ -1,6 +1,5 @@
 # 系统日志
 
-----
 
 # 一、技术背景：日志系统的演进与核心需求
 
@@ -10,17 +9,17 @@
 
 日志系统解决的核心问题：
 
--   集中化管理:100个微服务分散在50台服务器上,如何快速找到某个请求的完整链路日志?
+-   集中化管理: 100个微服务分散在50台服务器上,如何快速找到某个请求的完整链路日志?
     
--   实时搜索:500万条/分钟的日志量,如何在秒级找到某个错误日志?
+-   实时搜索: 500万条/分钟的日志量,如何在秒级找到某个错误日志?
     
--   可视化分析:如何直观地看到错误趋势、请求量变化、慢查询占比?
+-   可视化分析: 如何直观地看到错误趋势、请求量变化、慢查询占比?
     
--   告警通知:如何在错误率超过阈值时立即通知相关人员?
+-   告警通知: 如何在错误率超过阈值时立即通知相关人员?
     
--   存储优化:每天产生1TB日志,如何在成本可控的前提下存储和查询?
+-   存储优化: 每天产生1TB日志,如何在成本可控的前提下存储和查询?
     
--   安全合规:如何满足审计要求,保存180天的操作日志?
+-   安全合规: 如何满足审计要求,保存180天的操作日志?
     
 
 2025年的数据显示：
@@ -34,48 +33,48 @@
 
 **2、日志系统架构的三个阶段**
 
-第一代(2005-2012)：分散式日志
+第一代(2005-2012): 分散式日志
 
--   方式:SSH登录服务器,tail -f查看日志文件
+-   方式: SSH 登录服务器, tail -f 查看日志文件
     
--   工具:grep、awk、tail
+-   工具: grep、awk、tail
     
--   问题:效率低下,无法应对微服务和容器化
-    
-
-第二代(2012-2018):集中式日志(ELK时代)
-
--   架构:Agent采集 → 缓冲队列 → 存储 → 搜索/可视化
-    
--   代表:ELK(Elasticsearch + Logstash + Kibana)
-    
--   特点:全文搜索强大,但资源消耗巨大
+-   问题: 效率低下,无法应对微服务和容器化
     
 
-第三代(2018-至今):云原生日志(多样化选择)
+第二代(2012-2018): 集中式日志(ELK时代)
 
--   轻量级:Loki(Prometheus风格的日志系统)
+-   架构: Agent采集 → 缓冲队列 → 存储 → 搜索/可视化
     
--   云原生:Grafana Loki、AWS CloudWatch、Azure Monitor
+-   代表: ELK(Elasticsearch + Logstash + Kibana)
     
--   成本优化:冷热分离、对象存储、压缩优化
+-   特点: 全文搜索强大,但资源消耗巨大
     
--   特点:根据规模和预算灵活选择
+
+第三代(2018-至今): 云原生日志(多样化选择)
+
+-   轻量级: Loki (Prometheus风格的日志系统)
+    
+-   云原生: Grafana Loki、AWS CloudWatch、Azure Monitor
+    
+-   成本优化: 冷热分离、对象存储、压缩优化
+    
+-   特点: 根据规模和预算灵活选择
     
 
 **3、三大方案概述**
 
-1）ELK Stack(Elasticsearch + Logstash + Kibana)
+1）ELK Stack (Elasticsearch + Logstash + Kibana)
 
 诞生于2010年,Elastic公司的明星产品,事实上的日志标准。
 
 核心组件:
 
--   Elasticsearch:分布式搜索引擎,存储和检索日志
+-   Elasticsearch: 分布式搜索引擎, 存储和检索日志
     
--   Logstash:日志采集和处理管道,支持丰富的插件
+-   Logstash: 日志采集和处理管道, 支持丰富的插件
     
--   Kibana:Web可视化界面,查询和分析日志
+-   Kibana: Web可视化界面, 查询和分析日志
     
 
 典型架构:
@@ -84,15 +83,15 @@
 应用 → Logstash → Elasticsearch → Kibana
 ```
 
-市场地位:占有率约50%,大中型企业首选
+市场地位: 占有率约50%, 大中型企业首选
 
-2）EFK Stack(Elasticsearch + Fluentd + Kibana)
+2）EFK Stack (Elasticsearch + Fluentd + Kibana)
 
-ELK的变种,将Logstash替换为Fluentd,诞生于2016年左右。
+ELK的变种, 将Logstash替换为Fluentd, 诞生于2016年左右。
 
 核心差异:
 
--   Fluentd:CNCF项目,用Ruby开发,内存占用更低
+-   Fluentd: CNCF项目, 用Ruby开发, 内存占用更低
     
 -   架构和存储层与ELK完全相同(都用Elasticsearch)
     
@@ -101,19 +100,19 @@ ELK的变种,将Logstash替换为Fluentd,诞生于2016年左右。
 
 应用 → Fluentd → Elasticsearch → Kibana
 
-市场地位:占有率约20%,Kubernetes生态更流行
+市场地位: 占有率约20%, Kubernetes生态更流行
 
 3）Grafana Loki
 
-诞生于2018年,Grafana Labs推出的"Prometheus for logs"。
+诞生于2018年, Grafana Labs推出的 "Prometheus for logs"。
 
 核心理念:
 
-• 不索引日志内容,只索引标签(labels),极大降低存储成本
+• 不索引日志内容, 只索引标签(labels), 极大降低存储成本
 
-• 与Prometheus和Grafana深度集成
+• 与 Prometheus 和 Grafana 深度集成
 
-• 专为云原生和Kubernetes设计
+• 专为 云原生 和 Kubernetes 设计
 
 典型架构:
 
@@ -121,24 +120,24 @@ ELK的变种,将Logstash替换为Fluentd,诞生于2016年左右。
 应用 → Promtail → Loki → Grafana
 ```
 
-市场地位:占有率约15%(快速增长),中小团队新宠
+市场地位: 占有率约15%(快速增长), 中小团队新宠
 
 **4、中小团队的日志需求特点**
 
-与大型企业不同,中小团队(10-200人)在日志系统选型时有独特诉求:
+与大型企业不同, 中小团队(10-200人) 在日志系统选型时有独特诉求:
 
--   成本敏感:预算有限,每个月的日志系统成本不能超过服务器成本的20%
+-   成本敏感: 预算有限, 每个月的日志系统成本不能超过服务器成本的20%
     
--   运维能力有限:没有专职日志工程师,需要系统稳定、易维护
+-   运维能力有限: 没有专职日志工程师, 需要系统稳定、易维护
     
--   日志量适中:日志量在10GB-1TB/天之间
+-   日志量适中: 日志量在 10GB-1TB/天 之间
     
--   查询需求明确:主要用于故障排查,不需要复杂的日志分析
+-   查询需求明确: 主要用于故障排查, 不需要复杂的日志分析
     
--   快速上手:团队学习成本要低,配置要简单
+-   快速上手: 团队学习成本要低,配置要简单
     
 
-这些特点决定了中小团队的选型逻辑:够用、省钱、好维护,而非"功能最全、性能最强"。
+这些特点决定了中小团队的选型逻辑: 够用、省钱、好维护, 而非"功能最全、性能最强"。
 
 # 二、核心内容：三大方案全方位深度对比
 
@@ -149,7 +148,6 @@ ELK的变种,将Logstash替换为Fluentd,诞生于2016年左右。
 最小化生产部署:
 
 ```
-
 # 1. Elasticsearch集群(至少3节点保证高可用)
 # docker-compose.yml
 version:'3'
@@ -157,65 +155,65 @@ services:
 es01:
 image:docker.elastic.co/elasticsearch/elasticsearch:8.11.0
 environment:
--node.name=es01
--cluster.name=es-cluster
--discovery.seed_hosts=es02,es03
--cluster.initial_master_nodes=es01,es02,es03
--bootstrap.memory_lock=true
--"ES_JAVA_OPTS=-Xms4g -Xmx4g"
+  -node.name=es01
+  -cluster.name=es-cluster
+  -discovery.seed_hosts=es02,es03
+  -cluster.initial_master_nodes=es01,es02,es03
+  -bootstrap.memory_lock=true
+  -"ES_JAVA_OPTS=-Xms4g -Xmx4g"
 ulimits:
 memlock:
 soft:-1
 hard:-1
 volumes:
--es01_data:/usr/share/elasticsearch/data
+  -es01_data:/usr/share/elasticsearch/data
 ports:
--9200:9200
+  -9200:9200
 
 es02:
 image:docker.elastic.co/elasticsearch/elasticsearch:8.11.0
 environment:
--node.name=es02
--cluster.name=es-cluster
--discovery.seed_hosts=es01,es03
--cluster.initial_master_nodes=es01,es02,es03
--"ES_JAVA_OPTS=-Xms4g -Xmx4g"
+  -node.name=es02
+  -cluster.name=es-cluster
+  -discovery.seed_hosts=es01,es03
+  -cluster.initial_master_nodes=es01,es02,es03
+  -"ES_JAVA_OPTS=-Xms4g -Xmx4g"
 volumes:
--es02_data:/usr/share/elasticsearch/data
+  -es02_data:/usr/share/elasticsearch/data
 
 es03:
 image:docker.elastic.co/elasticsearch/elasticsearch:8.11.0
 environment:
--node.name=es03
--cluster.name=es-cluster
--discovery.seed_hosts=es01,es02
--cluster.initial_master_nodes=es01,es02,es03
--"ES_JAVA_OPTS=-Xms4g -Xmx4g"
+  -node.name=es03
+  -cluster.name=es-cluster
+  -discovery.seed_hosts=es01,es02
+  -cluster.initial_master_nodes=es01,es02,es03
+  -"ES_JAVA_OPTS=-Xms4g -Xmx4g"
 volumes:
--es03_data:/usr/share/elasticsearch/data
+  -es03_data:/usr/share/elasticsearch/data
 
 # 2. Kibana
 kibana:
 image:docker.elastic.co/kibana/kibana:8.11.0
 ports:
--5601:5601
+  -5601:5601
 environment:
-ELASTICSEARCH_HOSTS:'["http://es01:9200"]'
+  ELASTICSEARCH_HOSTS:'["http://es01:9200"]'
 
 # 3. Logstash
 logstash:
 image:docker.elastic.co/logstash/logstash:8.11.0
 ports:
--5044:5044
+  -5044:5044
 volumes:
--./logstash.conf:/usr/share/logstash/pipeline/logstash.conf
+  -./logstash.conf:/usr/share/logstash/pipeline/logstash.conf
 environment:
--"LS_JAVA_OPTS=-Xms2g -Xmx2g"
+ -"LS_JAVA_OPTS=-Xms2g -Xmx2g"
 
 volumes:
-es01_data:
-es02_data:
-es03_data:
+  es01_data:
+  es02_data:
+  es03_data:
 ```
 
 **Logstash配置示例(logstash.conf):**
@@ -231,23 +229,23 @@ input {
 filter {
 # 解析JSON日志
 if [message] =~ /^\{.*\}$/ {
-    json {
-      source => "message"
-    }
+  json {
+    source => "message"
   }
+}
 
 # 解析Nginx日志
 if [fields][type] == "nginx" {
-    grok {
-      match => { "message" => "%{COMBINEDAPACHELOG}" }
-    }
-    date {
-      match => [ "timestamp", "dd/MMM/yyyy:HH:mm:ss Z" ]
-    }
+  grok {
+    match => { "message" => "%{COMBINEDAPACHELOG}" }
   }
+  date {
+    match => [ "timestamp", "dd/MMM/yyyy:HH:mm:ss Z" ]
+  }
+}
 
 # 添加地理位置信息
-  geoip {
+geoip {
     source => "client_ip"
   }
 }
@@ -265,10 +263,10 @@ output {
 ```
 # filebeat.yml
 filebeat.inputs:
--type:log
+  -type:log
 enabled:true
 paths:
--/var/log/app/*.log
+  -/var/log/app/*.log
 fields:
 app:myapp
 env:production
@@ -277,8 +275,8 @@ output.logstash:
 hosts: ["logstash:5044"]
 
 processors:
--add_host_metadata:~
--add_cloud_metadata:~
+  -add_host_metadata:~
+  -add_cloud_metadata:~
 ```
 
 **资源需求:**
@@ -296,7 +294,7 @@ processors:
 
 复杂度评分:⭐⭐⭐⭐⭐(5星,最复杂)
 
-**2）EFK Stack：与ELK类似,采集器更轻量**
+**2）EFK Stack：与 ELK 类似, 采集器更轻量**
 
 核心差异:将Logstash替换为Fluentd
 
@@ -386,32 +384,32 @@ services:
 loki:
 image:grafana/loki:2.9.3
 ports:
--"3100:3100"
+  -"3100:3100"
 volumes:
--./loki-config.yaml:/etc/loki/local-config.yaml
--loki_data:/loki
+  -./loki-config.yaml:/etc/loki/local-config.yaml
+  -loki_data:/loki
 command:-config.file=/etc/loki/local-config.yaml
 
 promtail:
 image:grafana/promtail:2.9.3
 volumes:
--/var/log:/var/log
--./promtail-config.yaml:/etc/promtail/config.yml
+  -/var/log:/var/log
+  -./promtail-config.yaml:/etc/promtail/config.yml
 command:-config.file=/etc/promtail/config.yml
 
 grafana:
 image:grafana/grafana:10.2.0
 ports:
--"3000:3000"
+  -"3000:3000"
 environment:
--GF_AUTH_ANONYMOUS_ENABLED=true
--GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
+  -GF_AUTH_ANONYMOUS_ENABLED=true
+  -GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
 volumes:
--grafana_data:/var/lib/grafana
+  -grafana_data:/var/lib/grafana
 
 volumes:
-loki_data:
-grafana_data:
+  loki_data:
+  grafana_data:
 ```
 
 Loki配置(loki-config.yaml):
@@ -434,7 +432,7 @@ chunk_retain_period:30s
 
 schema_config:
 configs:
--from:2020-10-24
+  -from:2020-10-24
 store:boltdb-shipper
 object_store:filesystem
 schema:v11
@@ -461,10 +459,10 @@ max_look_back_period:0s
 
 table_manager:
 retention_deletes_enabled:true
-retention_period:336h # 14天保留
+retention_period:336h # 保留 14 天
 ```
 
-Promtail配置(promtail-config.yaml):
+Promtail 配置 (promtail-config.yaml):
 
 ```
 server:
@@ -475,32 +473,31 @@ positions:
 filename:/tmp/positions.yaml
 
 clients:
--url:http://loki:3100/loki/api/v1/push
+  -url:http://loki:3100/loki/api/v1/push
 
 scrape_configs:
--job_name:system
+  -job_name:system
 static_configs:
--targets:
--localhost
+  -targets:
+  -localhost
 labels:
-job:varlogs
-__path__:/var/log/*.log
-
--job_name:app
+  job:varlogs
+  __path__:/var/log/*.log
+  -job_name:app
 static_configs:
--targets:
--localhost
+  -targets:
+  -localhost
 labels:
-job:app
-env:production
-__path__:/var/log/app/*.log
+  job:app
+  env:production
+  __path__:/var/log/app/*.log
 pipeline_stages:
--json:
-expressions:
-level:level
-message:message
--labels:
-level:
+  -json:
+  expressions:
+  level:level
+  message:message
+  -labels:
+  level:
 ```
 
 资源需求:
@@ -1221,8 +1218,8 @@ loki:
 # 双写:日志同时发到ELK和Loki
 # Promtail配置多个outputs
 clients:
--url:http://loki-distributor:3100/loki/api/v1/push
--url:http://logstash:5044# 保留ELK
+  -url:http://loki-distributor:3100/loki/api/v1/push
+  -url:http://logstash:5044 # 保留ELK
 ```
 
 第3周:切换和下线
@@ -1615,7 +1612,7 @@ Loki适用场景:
 ```
 # 务必配置retention
 limits_config:
-retention_period:720h# 30天
+retention_period:720h # 30天
 
 # 定期清理
 table_manager:
@@ -1708,7 +1705,7 @@ PUT_ilm/policy/logs_policy
 }
 ```
 
-效果:成本降低60-70%
+效果: 成本降低60-70%
 
 2）关闭不必要的字段索引:
 
@@ -1723,7 +1720,7 @@ PUT_ilm/policy/logs_policy
 }
 ```
 
-效果:存储降低30-50%
+效果: 存储降低30-50%
 
 3）采样:
 
@@ -1731,14 +1728,14 @@ PUT_ilm/policy/logs_policy
 # Logstash采样配置
 filter {
   if [level] != "error" {
-    if [random_number] > 0.5 {  # 50% 采样
+    if [random_number] > 0.5 {  # 50%采样
       drop { }
     }
   }
 }
 ```
 
-效果:成本降低50%,但会丢失部分日志
+效果: 成本降低50%, 但会丢失部分日志
 
 Loki成本优化
 
@@ -1750,7 +1747,7 @@ storage_config:
   s3:s3://region/bucket # 或阿里云OSS、MinIO
 ```
 
-效果:成本降低80%(相比本地SSD)
+效果: 成本降低80%(相比本地SSD)
 
 2）合理配置retention:
 
@@ -1766,7 +1763,7 @@ retention_period:720h # 30天,根据实际需求
 ```
 # 不要过多标签(每个标签组合都会创建一个stream)
 # 错误示例:
-{app="nginx", host="server1", pod="nginx-abc", namespace="prod", region="us-east", ...}  # 太多了
+{app="nginx", host="server1", pod="nginx-abc", namespace="prod", region="us-east", ...} # 太多了
 
 # 正确示例:
 {app="nginx", env="prod", level="error"}  # 3-5个核心标签即可
@@ -1790,24 +1787,24 @@ retention_period:720h # 30天,根据实际需求
 
 三大方案定位:
 
--   Loki:最省钱,最简单,适合80%的中小团队
+-   Loki: 最省钱,最简单,适合80%的中小团队
     
--   EFK:平衡方案,功能与成本兼顾
+-   EFK: 平衡方案,功能与成本兼顾
     
--   ELK:最强大,适合大型企业和日志分析场景
+-   ELK: 最强大,适合大型企业和日志分析场景
     
 
 2025年的趋势
 
--   Loki快速增长:越来越多团队从ELK迁移到Loki,主要驱动力是成本
+-   Loki快速增长: 越来越多团队从ELK迁移到Loki,主要驱动力是成本
     
--   云原生日志:Kubernetes成为主流,Fluentd/Fluent Bit/Promtail等云原生采集器普及
+-   云原生日志: Kubernetes成为主流, Fluentd/Fluent Bit/Promtail等云原生采集器普及
     
--   AI驱动的日志分析:AI自动识别异常日志、根因分析、智能告警
+-   AI驱动的日志分析: AI自动识别异常日志、根因分析、智能告警
     
--   eBPF日志采集:无侵入式采集,性能更高(如Pixie、Cilium Hubble)
+-   eBPF日志采集: 无侵入式采集,性能更高(如Pixie、Cilium Hubble)
     
--   可观测性融合:Metrics + Logs + Traces 统一平台(Grafana/Datadog/New Relic)
+-   可观测性融合: Metrics + Logs + Traces 统一平台(Grafana/Datadog/New Relic)
     
 
 **2、给决策者的最后建议**
