--- a/网络安全.md
+++ b/网络安全.md
@@ -115,6 +115,14 @@ aircrack-ng -b *:*:*:*:*:* -w password.txt *.cap
 
 # 停止无线网卡监听模式
 airmon-ng stop wlan0mon
+# 启动网络服务
+systemctl start NetworkManager
+# 查看网络配置
+nmcli con show
+# 检查防火墙设置
+ufw status
+ufw allow in
+ufw allow out
 ~~~
 * [浏览器数据解密](https://github.com/angenalZZZ/HackBrowserData)
 
